--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "type": "module",
   "scripts": {
     "start": "vite",
-    "dev": "concurrently \"npm run start\" \"npm run server\"",
-    "build": "vite build",
+    "dev": "concurrently \"npm run server\" \"npm run start",
+    "build": "concurrently\"vite build\" \"netlify-lambda build functions\"",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "json-server --watch db.json --port 5000 delay 1000"
+    "server": "json-server --watch db.json --port 3000 delay 1000"
   },
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.8",
+    "netlify-lambda": "^2.0.16",
+    "nvm": "^0.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.0",
@@ -38,5 +40,10 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "vite": "^5.4.10"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
