--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "start": "vite",
     "dev": "concurrently \"npm run server\" \"npm run start",
-    "build": "concurrently\"vite build\" \"netlify-lambda build functions\"",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "json-server --watch db.json --port 3000 delay 1000"
+    "server": "json-server --watch db.json --port 5000 -- delay 1000"
   },
   "dependencies": {
     "@emotion/react": "^11.13.5",
